<resources>
    <string name="app_name_fa">شاخص توده بدنی</string>
    <string name="app_name">BMI</string>

    <string name="graph">نمودار</string>
    <string name="bmi">شاخص توده بدنی</string>
    <string name="table">جدول</string>
    <string name="history">سوابق</string>

    <string name="drawer_open">باز کردن منو کشوئی</string>
    <string name="drawer_close">بستن منو کشوئی</string>

    <string name="profile_management">مدیریت پروفایل</string>
    <string name="exit">خروج</string>
    <string name="settings">تنظیمات</string>
    <string name="about">درباره</string>
    <string name="more">بیشتر</string>

    <string name="profile_name">نام پروفایل</string>
    <string name="gender">جنسیت</string>
    <string name="birth_date">تاریخ تولد</string>

    <string-array name="gender_array">
        <item>مرد</item>
        <item>زن</item>
    </string-array>

    <string name="initial_info">اطلاعات اولیه</string>
    <string name="first_run_header1">به برنامه محاسبه شاخص توده بدنی خوش آمدید</string>
    <string name="first_run_header2">لطفا برای ایجاد پروفایل اطلاعات زیر را وارد نمائید</string>
    <string name="first_run_header3">لطفا برای محاسبه شاخص توده بدنی اطلاعات مربوط به وزن و قد خود را وارد نمائید</string>

    <string name="font_path">fonts/BYekan.ttf</string>
    <string name="height_unit">سانتی متر</string>
    <string name="weight_unit">کیلوگرم</string>

    <string name="height_unit_text">قد ( سانتی متر )</string>
    <string name="weight_unit_text">وزن ( کیلوگرم )</string>
    <string name="weight_unit_text2">وزن ( کیلوگرم ):</string>
    <string name="date">زمان:</string>

    <string name="ok">تائید</string>

    <string name="dot">.</string>

    <string name="start">شروع</string>

    <string name="profile_created_successful_msg">پروفایل جدید ایجاد شد</string>
    <string name="new_profile_validation_msg">لطفا تمام فیلد ها را پر نمائید</string>

    <string name="bmi_range_1">کمبود وزن بسیار شدید</string>
    <string name="bmi_range_2">کمبود وزن شدید</string>
    <string name="bmi_range_3">کمبود وزن</string>
    <string name="bmi_range_4">ایده آل</string>
    <string name="bmi_range_5">اضافه وزن</string>
    <string name="bmi_range_6">چاقی متوسط</string>
    <string name="bmi_range_7">چاقی شدید</string>
    <string name="bmi_range_8">چاقی بسیار شدید</string>

    <string name="bmi_range_value_1">کمتر از ۱۶</string>
    <string name="bmi_range_value_2">۱۶ تا ۱۷</string>
    <string name="bmi_range_value_3">۱۷ تا ۱۸.۵</string>
    <string name="bmi_range_value_4">۱۸.۵ تا ۲۵</string>
    <string name="bmi_range_value_5">۲۵ تا ۳۰</string>
    <string name="bmi_range_value_6">۳۰ تا ۳۵</string>
    <string name="bmi_range_value_7">۳۵ تا ۴۰</string>
    <string name="bmi_range_value_8">بیشتر از ۴۰</string>


    <string name="weight">وزن</string>

    <string name="new_weight_saved">وزن جدید ثبت شد</string>
    <string name="weight_deleted">وزن مورد نظر شما حذف شد</string>
    <string name="weight_edited">ویرایش وزن انجام شد</string>

    <string name="all">همه</string>
    <string name="one_month">یک ماه</string>
    <string name="one_week">یک هفته</string>
    <string name="one_year">یک سال</string>
    <string name="three_month">سه ماه</string>

    <string name="no_chart_data">داده ای برای نمایش وجود ندارد</string>

    <string name="option_3dot">&#8942;</string>

    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>

    <string-array name="table_menu">
        <item>ویرایش</item>
        <item>حذف</item>
    </string-array>

    <string-array name="profile_menu">
        <item>ویرایش</item>
        <item>حذف</item>
    </string-array>

    <string name="atleast_one_profile_is_needed">وجود حداقل یک پروفایل ضروری است</string>
    <string name="atleast_one_weight_is_needed">وجود حداقل یک وزن ضروری است</string>

    <string name="user_removed">کاربر حذف شد</string>

    <string name="new_profile">پروفایل جدید</string>
    <string name="edit_profile">ویرایش پروفایل</string>

    <string name="save">ذخیره</string>

    <string name="profile_edit_successful">ویرایش پروفایل انجام شد</string>

    <string name="change_profile_successful">تغییر پروفایل انجام شد</string>

    <string name="add_new_weight">افزودن وزن جدید</string>

    <string name="updating">در حال دریافت بروزرسانی …</string>
    <string name="check_update">بروزرسانی …</string>

    <string name="cancel">انصراف</string>

    <string name="yes">بلی</string>
    <string name="no">خیر</string>

    <string-array name="months">
        <item>فرودین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>

    <string name="validate_profile_name">نام پروفایل نمی تواند خالی باشد</string>
    <string name="validate_birthdate">تاریخ تولد نمی تواند خالی باشد</string>
    <string name="validate_height">قد نمی تواند خالی باشد</string>
    <string name="validate_weight">وزن نمی تواند خالی باشد</string>

    <string name="telegram_menu_item">گزارش خطا و ارتباط با پاپلی</string>

    <string name="telegram_not_installed">برنامه تلگرام در دستگاه شما نصب نشده است</string>

    <string name="cancelDownload">انصراف</string>
</resources>
