<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:textDirection="rtl">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemMenuProfile"
            android:checkable="true"
            android:enabled="true"
            android:icon="@drawable/account"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            android:title="@string/profile_management"
            android:visible="true"
            app:showAsAction="never" />

        <item
            android:id="@+id/itemMenuSettings"
            android:checkable="true"
            android:enabled="true"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            android:title="@string/settings"
            android:visible="false"
            app:showAsAction="never" />
    </group>


    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/itemMenuAbout"
                android:checkable="true"
                android:enabled="true"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:title="@string/about"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/itemMenuTelegram"
                android:checkable="false"
                android:enabled="true"
                android:icon="@drawable/telegram"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:title="@string/telegram_menu_item"
                android:visible="true"
                app:showAsAction="never" />

            <item
                android:id="@+id/itemMenuExit"
                android:checkable="false"
                android:enabled="true"
                android:icon="@drawable/exit"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:title="@string/exit"
                android:visible="true"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>