<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.mhdr.bmi.WeightRangeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/viewBMIColor1_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_1" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor1_b"
                android:layout_toStartOf="@id/viewBMIColor1_b"
                android:text="@string/bmi_range_1" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange1_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_1" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <View
                android:id="@+id/viewBMIColor2_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_2" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor2_b"
                android:layout_toStartOf="@id/viewBMIColor2_b"
                android:text="@string/bmi_range_2" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_2" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <View
                android:id="@+id/viewBMIColor3_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_3" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor3_b"
                android:layout_toStartOf="@id/viewBMIColor3_b"
                android:text="@string/bmi_range_3" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange3_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_3" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <View
                android:id="@+id/viewBMIColor4_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_4" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor4_b"
                android:layout_toStartOf="@id/viewBMIColor4_b"
                android:text="@string/bmi_range_4" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange4_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <View
                android:id="@+id/viewBMIColor5_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_5" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor5_b"
                android:layout_toStartOf="@id/viewBMIColor5_b"
                android:text="@string/bmi_range_5" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange5_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_5" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <View
                android:id="@+id/viewBMIColor6_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_6" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor6_b"
                android:layout_toStartOf="@id/viewBMIColor6_b"
                android:text="@string/bmi_range_6" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange6_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_6" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <View
                android:id="@+id/viewBMIColor7_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_7" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor7_b"
                android:layout_toStartOf="@id/viewBMIColor7_b"
                android:text="@string/bmi_range_7" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange7_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_7" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <View
                android:id="@+id/viewBMIColor8_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_bmi_range_8" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/viewBMIColor8_b"
                android:layout_toStartOf="@id/viewBMIColor8_b"
                android:text="@string/bmi_range_8" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightRange8_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/bmi_range_value_8" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
