<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="ir.mhdr.bmi.GraphFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayoutContainer1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/buttonGraphShowOneMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/one_month" />


            <Button
                android:id="@+id/buttonGraphShowOneWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/buttonGraphShowOneMonth"
                android:layout_toRightOf="@+id/buttonGraphShowOneMonth"
                android:background="@android:color/transparent"
                android:text="@string/one_week" />

            <Button
                android:id="@+id/buttonGraphShowAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/buttonGraphShowOneWeek"
                android:layout_toRightOf="@+id/buttonGraphShowOneWeek"
                android:background="@android:color/transparent"
                android:text="@string/all" />

            <Button
                android:id="@+id/buttonGraphShowOneYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/buttonGraphShowOneMonth"
                android:layout_toStartOf="@+id/buttonGraphShowOneMonth"
                android:background="@android:color/transparent"
                android:text="@string/one_year" />


            <Button
                android:id="@+id/buttonGraphShowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/buttonGraphShowOneYear"
                android:layout_toStartOf="@+id/buttonGraphShowOneYear"
                android:background="@android:color/transparent"
                android:text="@string/more2" />
        </RelativeLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChartWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relativeLayoutContainer1">

        </com.github.mikephil.charting.charts.LineChart>
    </RelativeLayout>

</FrameLayout>
