<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context="ir.mhdr.bmi.WeightFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="4"
            android:layout_gravity="center"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewWeightUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:gravity="center"
                android:text="@string/weight_unit"
                app:layout_column="3"
                app:layout_rowWeight="1" />

            <NumberPicker
                android:id="@+id/numberPickerWeight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                app:layout_column="2"
                app:layout_rowWeight="1">

            </NumberPicker>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/dot"
                app:layout_column="1"
                app:layout_rowWeight="1" />

            <NumberPicker
                android:id="@+id/numberPickerWeight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_column="0"
                app:layout_rowWeight="1">

            </NumberPicker>

        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonSaveWeight"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/ok"
                app:layout_column="0"
                app:layout_columnWeight="1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonCancelWeight"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/cancel"
                app:layout_column="1"
                app:layout_columnWeight="1" />

        </android.support.v7.widget.GridLayout>
        
    </android.support.v7.widget.LinearLayoutCompat>

</FrameLayout>
