<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context="ir.mhdr.bmi.HeightFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewHeightUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@+id/numberPickerHeight"
                android:text="@string/height_unit" />

            <NumberPicker
                android:layout_centerInParent="true"
                android:id="@+id/numberPickerHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>


        </RelativeLayout>


        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonSaveHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:text="@string/ok"
                app:layout_column="0"
                app:layout_columnWeight="1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonCancelHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                app:layout_column="1"
                app:layout_columnWeight="1" />

        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.LinearLayoutCompat>


</FrameLayout>
